# CryptoVol.ai

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 2025_09_07_2048-4ee11e5ecd35_initial_database_schema.py  2025_10_21_1332-ebf9fb831509_new_db.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/endpoints/: auth.py  dashboard.py  health.py  users.py
backend/app/core/: config.py  logging_config.py
backend/app/crud/: crud_crypto.py  crud_dashboard.py  crud_ml_model.py  crud_portfolio.py  crud_simulation.py  crud_user.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  crypto_data.py  ml_model.py  model.py  portfolio.py  simulation.py  user.py
backend/app/schemas/: crypto.py  dashboard.py  ml_model.py  portfolio.py  simulation.py  user.py
backend/app/security/: security.py
backend/app/services/: inference.py  market_data.py  model_loader.py
backend/app/templates/: dashboard.html  index.html  login.html  signup.html
backend/core/: config.py  logging_config.py
frontend/: index.html  reg.html
misc/: diogram.md
qf_models/: requirements.txt
qf_models/data/: ADA-USD.csv  BTC-USD.csv  ETH-USD.csv  SOL-USD.csv  TON-USD.csv
qf_models/data/data_days/: ADA-USD.csv  BTC-USD.csv  ETH-USD.csv  SOL-USD.csv  TON-USD.csv
qf_models/data/data_hourly/: ADA-USD_hourly.csv  BTC-USD_hourly.csv  ETH-USD_hourly.csv  SOL-USD_hourly.csv  TON-USD_hourly.csv
qf_models/notebooks/: garch_experiment_01.ipynb
qf_models/scripts/: download_data.py  download_days_data.py  download_hourly_data.py
scripts/: train_local.py
