[project]
name = "cryptovol-ai"
version = "0.1.0"
description = "CryptoVol.ai is a web platform for advanced cryptocurrency market volatility analysis and forecasting. The system uses econometric GARCH models to model volatility clustering and Monte Carlo simulations to generate probabilistic price forecasts."
authors = [
    {name = "Moroz Roman",email = "morozdef24@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "sqlalchemy[asyncio] (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "colorlog (>=6.9.0,<7.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "arch (>=8.0.0,<9.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)"
]

[tool.poetry]
packages = [{include = "cryptovol"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
ruff = "^0.12.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
